<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/home_top10_tv"
        style="@style/HomeTopSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/home_top10"
        app:layout_constraintStart_toEndOf="@id/home_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
        tools:text="Top-10: Ukrainian songs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_top10_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/home_top100_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_top10_tv" />

    <TextView
        android:id="@+id/home_top100_tv"
        style="@style/HomeTopSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_top100"
        app:layout_constraintBottom_toTopOf="@id/home_top100_recycler_view"
        app:layout_constraintStart_toEndOf="@id/home_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/home_top10_recycler_view"
        tools:text="Top-100: Ukrainian songs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_top100_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/home_mini_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_top100_tv" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_mini_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_top100_recycler_view">

        <SeekBar
            android:id="@+id/home_mini_player_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_mini_player_song"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/home_mini_player_buttons"
            app:layout_constraintHorizontal_weight="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_mini_player_image_cover"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/home_mini_player_song_cover_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_mini_player_song_title"
                style="@style/MiniPlayerSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toTopOf="@id/home_mini_player_song_artist"
                app:layout_constraintStart_toEndOf="@id/home_mini_player_image_cover"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Chaff &amp; Dust" />

            <TextView
                android:id="@+id/home_mini_player_song_artist"
                style="@style/MiniPlayerSongArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/home_mini_player_image_cover"
                app:layout_constraintTop_toBottomOf="@id/home_mini_player_song_title"
                tools:text="HYONNA" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_mini_player_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintStart_toEndOf="@id/home_mini_player_song"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_mini_player_button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_mini_player_prev_desc"
                android:src="@drawable/prev"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/home_mini_player_button_play_pause"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/home_mini_player_button_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_mini_player_play_pause_desc"
                android:src="@drawable/play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/home_mini_player_button_next"
                app:layout_constraintStart_toEndOf="@id/home_mini_player_button_prev"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/home_mini_player_button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_mini_player_next_desc"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/home_mini_player_button_play_pause"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>