<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    tools:context=".ui.player.PlayerFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/player_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/player_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/player_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/player_playing_now_desc"
        android:src="@drawable/ic_hide_arrow"
        app:layout_constraintEnd_toStartOf="@id/player_playing_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_playing_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/player_playing_now"
        android:textColor="@color/playerTvColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/player_youtube_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/player_youtube_view"
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragmentX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/player_title"
        app:layout_constraintTop_toBottomOf="@id/player_playing_now" />

    <TextView
        android:id="@+id/player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:textColor="@color/topSongsTextColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/player_channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_youtube_view"
        tools:text="Moment Apart" />

    <TextView
        android:id="@+id/player_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/songsArtistTextColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/player_timeline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_title"
        tools:text="ODESZA" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_timeline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/player_buttons"
        app:layout_constraintEnd_toStartOf="@id/player_guideline_end"
        app:layout_constraintStart_toEndOf="@id/player_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/player_channel">

        <TextView
            android:id="@+id/player_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/songsArtistTextColor"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/player_seekbar"
            app:layout_constraintEnd_toStartOf="@id/player_duration_time"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00" />

        <TextView
            android:id="@+id/player_duration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/songsArtistTextColor"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/player_seekbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_current_time"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00" />

        <SeekBar
            android:id="@+id/player_seekbar"
            style="@style/PlayerSeekBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_timeline">

        <ImageView
            android:id="@+id/player_button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_mini_player_prev_desc"
            android:src="@drawable/ic_prev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_button_play_pause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_button_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_mini_player_play_pause_desc"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_button_next"
            app:layout_constraintStart_toEndOf="@id/player_button_prev"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_mini_player_next_desc"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_button_play_pause"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>