<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    android:gravity="bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryVariant"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintBottom_toTopOf="@id/main_fragment_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_fragment_container"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
            app:navGraph="@navigation/navigation_graph" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mini_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <SeekBar
                android:id="@+id/mini_player_seekbar"
                style="@style/PlayerSeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mini_player_song"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mini_player_buttons"
                app:layout_constraintHorizontal_weight="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mini_player_seekbar">

                <ImageView
                    android:id="@+id/mini_player_image_cover"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:contentDescription="@string/home_mini_player_song_cover_desc"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mini_player_title"
                    style="@style/MiniPlayerSongTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    app:layout_constraintBottom_toTopOf="@id/mini_player_channel"
                    app:layout_constraintStart_toEndOf="@id/mini_player_image_cover"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Chaff &amp; Dust" />

                <TextView
                    android:id="@+id/mini_player_channel"
                    style="@style/MiniPlayerSongArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mini_player_image_cover"
                    app:layout_constraintTop_toBottomOf="@id/mini_player_title"
                    tools:text="HYONNA" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mini_player_buttons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.35"
                app:layout_constraintStart_toEndOf="@id/mini_player_song"
                app:layout_constraintTop_toBottomOf="@id/mini_player_seekbar">

                <ImageView
                    android:id="@+id/mini_player_button_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_mini_player_prev_desc"
                    android:padding="7dp"
                    android:src="@drawable/ic_previous"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mini_player_button_play_pause"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/mini_player_button_play_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_mini_player_play_pause_desc"
                    android:padding="7dp"
                    android:src="@drawable/ic_play"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mini_player_button_next"
                    app:layout_constraintStart_toEndOf="@id/mini_player_button_prev"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/mini_player_button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_mini_player_next_desc"
                    android:padding="7dp"
                    android:src="@drawable/ic_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mini_player_button_play_pause"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/player_guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/player_guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/player_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_playing_now_desc"
            android:src="@drawable/ic_hide_arrow"
            app:layout_constraintBottom_toTopOf="@id/player_youtube_view"
            app:layout_constraintEnd_toStartOf="@id/player_playing_now"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mini_player" />

        <TextView
            android:id="@+id/player_playing_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/player_playing_now"
            android:textColor="@color/playerTvColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/player_youtube_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mini_player" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/player_youtube_view"
            android:name="com.google.android.youtube.player.YouTubePlayerSupportFragmentX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/player_content_info"
            app:layout_constraintTop_toBottomOf="@id/player_playing_now"
            tools:layout_height="200dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/player_content_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/player_timeline"
            app:layout_constraintEnd_toEndOf="@id/player_guideline_end"
            app:layout_constraintStart_toStartOf="@id/player_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/player_youtube_view">

            <TextView
                android:id="@+id/player_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:textColor="@color/topSongsTextColor"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/player_channel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Moment Apart" />

            <TextView
                android:id="@+id/player_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/songsArtistTextColor"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_title"
                tools:text="ODESZA" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/player_timeline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/player_buttons"
            app:layout_constraintEnd_toStartOf="@id/player_guideline_end"
            app:layout_constraintStart_toEndOf="@id/player_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/player_content_info">

            <TextView
                android:id="@+id/player_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/roboto_bold"
                android:padding="10dp"
                android:textColor="@color/songsArtistTextColor"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@id/player_seekbar"
                app:layout_constraintEnd_toStartOf="@id/player_duration_time"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="00:00" />

            <TextView
                android:id="@+id/player_duration_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/roboto_bold"
                android:padding="10dp"
                android:textColor="@color/songsArtistTextColor"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@id/player_seekbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/player_current_time"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="00:00" />

            <SeekBar
                android:id="@+id/player_seekbar"
                style="@style/PlayerSeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/player_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_timeline">

            <ImageView
                android:id="@+id/player_button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_mini_player_prev_desc"
                android:padding="20dp"
                android:src="@drawable/ic_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/player_button_play_pause"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/player_button_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_mini_player_play_pause_desc"
                android:padding="20dp"
                android:src="@drawable/ic_pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/player_button_next"
                app:layout_constraintStart_toEndOf="@id/player_button_prev"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/player_button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_mini_player_next_desc"
                android:padding="20dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/player_button_play_pause"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
